load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@bazel_gazelle//language/go",
    ],
)

# We use gazelle to generate BUILD.bazel files. See
# https://github.com/bazelbuild/bazel-gazelle/blob/master/README.rst

# gazelle:prefix github.com/emer/emergent
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

go_library(
    name = "emergent",
    srcs = ["doc.go"],
    importpath = "github.com/emer/emergent",
    visibility = ["//visibility:public"],
)
