load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "decoder",
    srcs = [
        "sigmoid.go",
        "softmax.go",
        "vote.go",
    ],
    importpath = "github.com/emer/emergent/decoder",
    visibility = ["//visibility:public"],
    deps = [
        "//emer",
        "@com_github_emer_etable//etensor",
        "@com_github_goki_mat32//:mat32",
    ],
)

go_test(
    name = "decoder_test",
    srcs = [
        "sigmoid_test.go",
        "softmax_test.go",
        "vote_test.go",
    ],
    embed = [":decoder"],
)
