load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ecmd",
    srcs = [
        "args.go",
        "std.go",
        "types.go",
    ],
    importpath = "github.com/emer/emergent/ecmd",
    visibility = ["//visibility:public"],
    deps = [
        "//elog",
        "//emer",
        "//etime",
        "@com_github_emer_empi//mpi",
    ],
)
