load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "edge",
    srcs = [
        "edge.go",
        "wrapmindist.go",
    ],
    importpath = "github.com/emer/emergent/edge",
    visibility = ["//visibility:public"],
    deps = ["@com_github_goki_mat32//:go_default_library"],
)
