load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "egui",
    srcs = [
        "grids.go",
        "gui.go",
        "loopctrl.go",
        "netview.go",
        "plots.go",
        "toolbar.go",
        "toolghosting.go",
    ],
    importpath = "github.com/emer/emergent/egui",
    visibility = ["//visibility:public"],
    deps = [
        "//actrf",
        "//elog",
        "//emer",
        "//etime",
        "//looper",
        "//netview",
        "@com_github_emer_etable//eplot",
        "@com_github_emer_etable//etensor",
        "@com_github_emer_etable//etview",
        "@com_github_goki_gi//gi",
        "@com_github_goki_gi//giv",
        "@com_github_goki_ki//ki",
        "@com_github_goki_ki//kit",
        "@com_github_goki_mat32//:mat32",
    ],
)
