load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "elog",
    srcs = [
        "context.go",
        "item.go",
        "logs.go",
        "stditems.go",
        "table.go",
    ],
    importpath = "github.com/emer/emergent/elog",
    visibility = ["//visibility:public"],
    deps = [
        "//emer",
        "//estats",
        "//etime",
        "@com_github_emer_empi//empi",
        "@com_github_emer_empi//mpi",
        "@com_github_emer_etable//agg:go_default_library",
        "@com_github_emer_etable//etable:go_default_library",
        "@com_github_emer_etable//etensor:go_default_library",
        "@com_github_emer_etable//metric:go_default_library",
        "@com_github_emer_etable//minmax:go_default_library",
        "@com_github_emer_etable//split:go_default_library",
    ],
)

go_test(
    name = "elog_test",
    srcs = ["elog_test.go"],
    embed = [":elog"],
    deps = [
        "//etime",
        "@com_github_emer_etable//etensor:go_default_library",
    ],
)
