load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "elog",
    srcs = [
        "context.go",
        "item.go",
        "logs.go",
        "stditems.go",
        "table.go",
    ],
    importpath = "github.com/emer/emergent/elog",
    visibility = ["//visibility:public"],
    deps = [
        "//emer",
        "//estats",
        "//etime",
        "@com_github_emer_empi//empi",
        "@com_github_emer_empi//mpi",
        "@com_github_emer_etable//agg",
        "@com_github_emer_etable//etable",
        "@com_github_emer_etable//etensor",
        "@com_github_emer_etable//metric",
        "@com_github_emer_etable//minmax",
        "@com_github_emer_etable//split",
    ],
)

go_test(
    name = "elog_test",
    srcs = ["elog_test.go"],
    embed = [":elog"],
    deps = [
        "//etime",
        "@com_github_emer_etable//etensor",
    ],
)
