load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "env",
    srcs = [
        "ctr.go",
        "ctrs.go",
        "curprv.go",
        "doc.go",
        "element.go",
        "env.go",
        "envs.go",
        "fixed.go",
        "freq.go",
        "time.go",
        "timescales_string.go",
    ],
    importpath = "github.com/emer/emergent/env",
    visibility = ["//visibility:public"],
    deps = [
        "//erand",
        "//estats",
        "//etime",
        "@com_github_emer_etable//etable",
        "@com_github_emer_etable//etensor",
        "@com_github_goki_ki//kit",
    ],
)
