load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "estats",
    srcs = [
        "actrf.go",
        "funcs.go",
        "rasters.go",
        "stats.go",
    ],
    importpath = "github.com/emer/emergent/estats",
    visibility = ["//visibility:public"],
    deps = [
        "//actrf",
        "//confusion",
        "//emer",
        "//timer",
        "@com_github_emer_etable//etable:go_default_library",
        "@com_github_emer_etable//etensor:go_default_library",
        "@com_github_emer_etable//metric:go_default_library",
        "@com_github_emer_etable//norm:go_default_library",
        "@com_github_emer_etable//pca:go_default_library",
        "@com_github_emer_etable//simat:go_default_library",
    ],
)
