load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "estats",
    srcs = [
        "actrf.go",
        "funcs.go",
        "rasters.go",
        "stats.go",
    ],
    importpath = "github.com/emer/emergent/estats",
    visibility = ["//visibility:public"],
    deps = [
        "//actrf",
        "//confusion",
        "//emer",
        "//timer",
        "@com_github_emer_etable//eplot",
        "@com_github_emer_etable//etable",
        "@com_github_emer_etable//etensor",
        "@com_github_emer_etable//metric",
        "@com_github_emer_etable//norm",
        "@com_github_emer_etable//pca",
        "@com_github_emer_etable//simat",
    ],
)
