load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "etime",
    srcs = [
        "modes.go",
        "modes_string.go",
        "scopekey.go",
        "times.go",
        "times_string.go",
    ],
    importpath = "github.com/emer/emergent/etime",
    visibility = ["//visibility:public"],
    deps = ["@com_github_goki_ki//kit:go_default_library"],
)
