load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "looper",
    srcs = [
        "counter.go",
        "event.go",
        "funcs.go",
        "loop.go",
        "manager.go",
        "stack.go",
    ],
    importpath = "github.com/emer/emergent/looper",
    visibility = ["//visibility:public"],
    deps = [
        "//estats",
        "//etime",
        "@com_github_goki_ki//indent:go_default_library",
    ],
)

go_test(
    name = "looper_test",
    srcs = ["step_test.go"],
    embed = [":looper"],
    deps = ["//etime"],
)
