load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "netview",
    srcs = [
        "laymesh.go",
        "layname.go",
        "layobj.go",
        "layraster.go",
        "netdata.go",
        "netview.go",
        "params.go",
        "prjndata.go",
        "viewupdt.go",
    ],
    importpath = "github.com/emer/emergent/netview",
    visibility = ["//visibility:public"],
    deps = [
        "//emer",
        "//etime",
        "//ringidx",
        "@com_github_emer_etable//eplot:go_default_library",
        "@com_github_emer_etable//etable:go_default_library",
        "@com_github_emer_etable//etensor:go_default_library",
        "@com_github_emer_etable//minmax:go_default_library",
        "@com_github_goki_gi//colormap:go_default_library",
        "@com_github_goki_gi//gi:go_default_library",
        "@com_github_goki_gi//gi3d:go_default_library",
        "@com_github_goki_gi//gist:go_default_library",
        "@com_github_goki_gi//giv:go_default_library",
        "@com_github_goki_gi//oswin:go_default_library",
        "@com_github_goki_gi//oswin/key:go_default_library",
        "@com_github_goki_gi//oswin/mouse:go_default_library",
        "@com_github_goki_gi//units:go_default_library",
        "@com_github_goki_ki//ki:go_default_library",
        "@com_github_goki_ki//kit:go_default_library",
        "@com_github_goki_mat32//:go_default_library",
        "@com_github_goki_vgpu//vshape:go_default_library",
    ],
)
