load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "netview",
    srcs = [
        "laymesh.go",
        "layname.go",
        "layobj.go",
        "layraster.go",
        "netdata.go",
        "netview.go",
        "params.go",
        "prjndata.go",
        "viewupdt.go",
    ],
    importpath = "github.com/emer/emergent/netview",
    visibility = ["//visibility:public"],
    deps = [
        "//emer",
        "//etime",
        "//ringidx",
        "@com_github_emer_etable//eplot",
        "@com_github_emer_etable//etable",
        "@com_github_emer_etable//etensor",
        "@com_github_emer_etable//minmax",
        "@com_github_goki_gi//colormap",
        "@com_github_goki_gi//gi",
        "@com_github_goki_gi//gi3d",
        "@com_github_goki_gi//gist",
        "@com_github_goki_gi//giv",
        "@com_github_goki_gi//oswin",
        "@com_github_goki_gi//oswin/key",
        "@com_github_goki_gi//oswin/mouse",
        "@com_github_goki_gi//units",
        "@com_github_goki_ki//ki",
        "@com_github_goki_ki//kit",
        "@com_github_goki_mat32//:mat32",
        "@com_github_goki_vgpu//vshape",
    ],
)
