load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "params",
    srcs = [
        "apply.go",
        "diff.go",
        "doc.go",
        "flex.go",
        "hypers.go",
        "io.go",
        "params.go",
        "styler.go",
    ],
    importpath = "github.com/emer/emergent/params",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_goki_gi//gi:go_default_library",
        "@com_github_goki_ki//indent:go_default_library",
        "@com_github_goki_ki//ki:go_default_library",
        "@com_github_goki_ki//kit:go_default_library",
    ],
)

go_test(
    name = "params_test",
    srcs = ["params_test.go"],
    embed = [":params"],
    deps = ["@com_github_andreyvit_diff//:go_default_library"],
)
