load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "patgen",
    srcs = [
        "configpats.go",
        "configvocab.go",
        "doc.go",
        "flip.go",
        "permuted.go",
        "reshape.go",
        "shuffle.go",
    ],
    importpath = "github.com/emer/emergent/patgen",
    visibility = ["//visibility:public"],
    deps = [
        "//erand",
        "@com_github_emer_etable//etable",
        "@com_github_emer_etable//etensor",
        "@com_github_emer_etable//metric",
        "@com_github_emer_etable//tsragg",
        "@com_github_goki_gi//gi",
        "@com_github_goki_ki//ints",
        "@com_github_goki_mat32//:mat32",
    ],
)

go_test(
    name = "patgen_test",
    srcs = ["configvocabpats_test.go"],
    embed = [":patgen"],
    deps = ["@com_github_emer_etable//etable"],
)
