load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "popcode",
    srcs = [
        "doc.go",
        "popcode1d.go",
        "popcode2d.go",
        "ring.go",
    ],
    importpath = "github.com/emer/emergent/popcode",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_emer_etable//etensor:go_default_library",
        "@com_github_goki_mat32//:go_default_library",
    ],
)

go_test(
    name = "popcode_test",
    srcs = ["popcode_test.go"],
    embed = [":popcode"],
    deps = [
        "@com_github_emer_etable//etensor:go_default_library",
        "@com_github_goki_mat32//:go_default_library",
    ],
)
