load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prjn",
    srcs = [
        "circle.go",
        "doc.go",
        "full.go",
        "onetoone.go",
        "pattern.go",
        "poolonetoone.go",
        "poolrect.go",
        "poolsameunit.go",
        "pooltile.go",
        "pooltilesub.go",
        "poolunifrnd.go",
        "rect.go",
        "unifrnd.go",
    ],
    importpath = "github.com/emer/emergent/prjn",
    visibility = ["//visibility:public"],
    deps = [
        "//edge",
        "//efuns",
        "//erand",
        "//evec",
        "@com_github_emer_etable//etensor:go_default_library",
        "@com_github_emer_etable//minmax:go_default_library",
        "@com_github_goki_ki//ints:go_default_library",
        "@com_github_goki_mat32//:go_default_library",
    ],
)

go_test(
    name = "prjn_test",
    srcs = ["prjn_test.go"],
    embed = [":prjn"],
    deps = [
        "@com_github_emer_etable//etensor:go_default_library",
        "@com_github_goki_ki//ints:go_default_library",
    ],
)
