load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "relpos",
    srcs = [
        "rel.go",
        "relations_string.go",
        "xaligns_string.go",
        "yaligns_string.go",
    ],
    importpath = "github.com/emer/emergent/relpos",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_goki_ki//kit",
        "@com_github_goki_mat32//:mat32",
    ],
)

go_test(
    name = "relpos_test",
    srcs = ["rel_test.go"],
    embed = [":relpos"],
    deps = ["@com_github_goki_mat32//:mat32"],
)
