load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stepper",
    srcs = [
        "doc.go",
        "runstate_string.go",
        "stepper.go",
    ],
    importpath = "github.com/emer/emergent/stepper",
    visibility = ["//visibility:public"],
    deps = ["@com_github_goki_ki//kit:go_default_library"],
)
